Задание по HTML

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,23 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
     <head>
         <title>HTML</title>
     </head>
-    <body></body>
+    <body>
+        <h1>Заголовок первого уровня</h1>
+        <h2>Заголовок второго уровня</h2>
+        <ol>
+            <li><a href="Валидатор W3C">Валидатор W3C</a></li>
+            <li>
+                <a href="https://learn.javascript.ru/script-async-defer"
+                    >Подробнее про подключение скриптов</a
+                >
+            </li>
+            <li>
+                <a href="https://html.spec.whatwg.org/"
+                    >Спецификация HTML 5.2</a
+                >
+            </li>
+        </ol>
+    </body>
 </html>
